--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
@@ -19,6 +20,7 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-redux": "^8.1.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
