--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.2.14",
+    "axios": "^1.5.0",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-uuid": "^2.0.1",
     "react-redux": "^8.1.2",
     "typescript": "^5.1.3"
   },
