add lat lon bottom sheet on home map

--- a/app.json
+++ b/app.json
@@ -11,16 +11,24 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": {
+          "apiKey": "AIzaSyDl4NzoZWN0VVegsUPiH_0vr-Aak5hGup4"
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDl4NzoZWN0VVegsUPiH_0vr-Aak5hGup4"
+        }
       }
     },
     "web": {
